# m5

./: package.json
apps/api/: Cargo.toml  env.example
apps/api/migrations/: 2025050503000_create_user_table.sql
apps/api/src/: bootstrap.rs  config.rs  error.rs  lib.rs  main.rs
apps/api/src/api/: routes.rs
apps/api/src/api/middleware/: mod.rs
apps/api/src/app/: config.rs  error.rs
apps/api/src/common/: constants.rs  errors.rs  logging.rs  middleware.rs  mod.rs  security.rs  types.rs  utils.rs  validation.rs
apps/api/src/config/: app.rs  database.rs  env.rs  mod.rs  services.rs
apps/api/src/db/: mod.rs  mongo.rs  pool.rs
apps/api/src/domain/models/: analytic.rs  data.rs  identity.rs  mod.rs  user.rs
apps/api/src/domain/repositories/: analytic.rs  data.rs  identity.rs  mod.rs  user.rs
apps/api/src/graphql/: mod.rs  mutation.rs  query.rs  schema.rs
apps/api/src/graphql/mutations/: mod.rs
apps/api/src/graphql/queries/: mod.rs
apps/api/src/infrastructure/: database.rs
apps/api/src/infrastructure/database/: connection.rs  migrations.rs
apps/api/src/models/: user.rs
apps/api/src/routes/: graphql.rs  mod.rs
apps/scraper/: .gitignore  requirements.txt
apps/scraper/api/: client.py
apps/scraper/config/: data_source.py  setting.py
apps/scraper/processors/: sentiment.py
apps/scraper/scrapers/: base.py
apps/scraper/src/: main.py
apps/scraper/src/processors/: asset.py  base.py  macro.py
apps/scraper/src/scrapers/: asset.py  macro.py  sentiment.py
apps/scraper/src/scripts/: run_scrapper.py
apps/scraper/utils/: logger.py  validators.py
apps/worker/: package.json
apps/worker/src/: app.ts
apps/worker/src/config/: index.ts
(+7 files in other folders)
