[package]
name = "api"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.8.4"
tower = "0.5.2"
tower-http = { version = "0.6.2", features = ["cors", "trace"] }
tokio = { version = "1.44.2", features = ["full"] }
hyper = { version = "1.6.0", features = ["full"] }

async-graphql = { version = "7.0.16", features = ["chrono", "bson"] }
async-graphql-axum = "7.0.16"

mongodb = "3.2.3"
bson = { version = "2.14.0", features = ["chrono-0_4"] }

serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
chrono = { version = "0.4.41", features = ["serde"] }
dotenv = "0.15.0"
thiserror = "2.0.12"
anyhow = "1.0.98"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
futures = "0.3.31"
async-trait = "0.1.88"