[package]
name = "api"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.8.4"
tower = "0.5.2"
tower-http = { version = "0.6.2", features = ["cors", "trace"] }
tokio = { version = "1.44.2", features = ["full"] }

async-graphql = { version = "7.0.16", features = ["chrono"] }
async-graphql-axum = "7.0.16"

sqlx = { version = "0.8.5", features = ["runtime-tokio-rustls", "postgres", "uuid", "chrono", "json"] }
uuid = { version = "1.16.0", features = ["v4", "serde"] }

serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
chrono = { version = "0.4.41", features = ["serde"] }
dotenv = "0.15.0"
config = "0.15.11"
thiserror = "2.0.12"
anyhow = "1.0.98"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
argon2 = "0.5.3"